--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/147/index.mdx
@@ -8,7 +8,7 @@ image: /img/TWIR_POST.png
 
 Salut à tous !
 
-Je compte [**recruter un stagiaire ou alternant**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955)), n'hésites pas à postuler!
+Je compte [**recruter un stagiaire ou alternant**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955), n'hésites pas à postuler!
 
 Cette semaine, on fête les [10 ans de React](https://twitter.com/sebastienlorber/status/1662957673573130244)! 🥳️
 
