--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
@@ -9,6 +9,10 @@ unlisted: true
 
 Salut à tous !
 
+Recrutement
+
+Podcast: https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--May-2023-e25flvh
+
 <Todo />
 
 <!-- truncate -->
