--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
@@ -52,7 +52,29 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [You Can Stop Hating React.FC](https://www.totaltypescript.com/you-can-stop-hating-react-fc)
+- [This Month in React – May 2023](https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--May-2023-e25flvh)
+- [Colocate your routes into feature folders with Remix Custom Routes](https://www.jacobparis.com/content/remix-custom-routes)
+- [Add Drizzle ORM to a Remix app](https://www.jacobparis.com/content/remix-drizzle)
+- [Sophie Alpert looking for a job](https://twitter.com/sebastienlorber/status/1668562588781748224): opportunité unique d'embaucher la top 4 contributrice React.
+- [A Visual Guide to the new App Router in Next.js 13](https://www.builder.io/blog/next-13-app-router)
+- [Hydration is a tree, Resumability is a map](https://www.builder.io/blog/hydration-tree-resumability-map)
+- [Mastering Next.js Error Handling with the App Router](https://www.sitepoint.com/next-js-error-handling-app-router/)
+- [High-school student makes React a million times faster](https://www.youtube.com/watch?v=VkezQMb1DHw)
+- https://twitter.com/milliondotjs/status/1667628546666184704 ???
+- https://twitter.com/storybookjs/status/1666430749392642052 ???
+- https://twitter.com/Steve8708/status/1666549203483623425 ???
+- [Tremor v3](https://twitter.com/tremorlabs/status/1666706183409860610)
+- [Shadcn UI CLI](https://twitter.com/shadcn/status/1666861850091458560)
+- [Thinking in React Query](https://tkdodo.eu/blog/thinking-in-react-query)
+- [Hydration is a tree, Resumability is a map](https://www.builder.io/blog/hydration-tree-resumability-map) + https://twitter.com/manucorporat/status/1668249534802034692
+- [react-server-dom-vite](https://twitter.com/nkSaraf98/status/1667934636297650179)
+- [Better Images in Astro](https://astro.build/blog/images/)
+- [Zedux - A Molecular State Engine for React](https://omnistac.github.io/zedux/) + [Scalability: The Lost Level of React State Management](https://omnistac.github.io/zedux/blog/scalability-the-lost-level)
+- [Hiber3D](https://hiberworld.com/developer)
+- [NakedJSX](https://nakedjsx.org/)
+- [Is Next.js App Router Slow? Performance Deep Dive](https://www.youtube.com/watch?v=HbUDiNlU6Yw)
+- [React-Redux 8.1](https://github.com/reduxjs/react-redux/releases/tag/v8.1.0)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -76,7 +98,10 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [React-Native 0.71.10](https://github.com/facebook/react-native/releases/tag/v0.71.10): avec la sortie de XCode 15, on devrait avoir encore une autre release v0.71, et la v0.72 arrivera un peu après?
+- [Expo-Apple-Targets - Config Plugin to setup Apple targets](https://github.com/EvanBacon/expo-apple-targets) + https://twitter.com/Baconbrix/status/1667611993178603524
+- [What’s the best cross-platform technology in 2023](https://www.youtube.com/watch?v=lYfgGgJgHB0): belle retrospective du cross-platform de 2010 à 2023, et les principaux acteurs en 2023.
+- [React Native Shared Element Transitions with Reanimated 3](https://www.youtube.com/watch?v=tsleLxbvxe0)
 
 ---
 
@@ -98,9 +123,10 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Cette library React UI est un Game Changer](https://www.youtube.com/watch?v=IXAw4YbSDhw)
+- [Typescript v5.1 fixe le problème d'undefined - Actus JS de la semaine](https://www.youtube.com/watch?v=OmGICbHLOzU)
 
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
+  💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
 <Todo />
 
@@ -108,13 +134,27 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Polywasm - A polyfill for WebAssembly](https://github.com/evanw/polywasm)
+- [Wasmati - a TypeScript library to write Wasm at the instruction level](https://www.zksecurity.xyz/blog/posts/wasmati/)
+- [Why We Should Stop Using JavaScript According to Douglas Crockford](https://www.youtube.com/watch?v=lc5Np9OqDHU)
+- [Web Apps on macOS Sonoma 14 Beta](https://blog.tomayac.com/2023/06/07/web-apps-on-macos-sonoma-14-beta/)
+- [Modern CSS in Real Life](https://chriscoyier.net/2023/06/06/modern-css-in-real-life/)
+- [Modern CSS For Dynamic Component-Based Architecture](https://moderncss.dev/modern-css-for-dynamic-component-based-architecture/)
+- [Lightning CSS 1.21](https://twitter.com/devongovett/status/1666476856990908416)
+- [ts-patterns 5.0](https://github.com/gvergnaud/ts-pattern/releases/tag/v5.0.0)
+- [What's New in DevTools (Chrome 115)](https://developer.chrome.com/blog/new-in-devtools-115/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/adamwathan/status/1666939669311901696
+
+https://twitter.com/Mappletons/status/1667244080324136972
+
+https://twitter.com/tannerlinsley/status/1666913815999696897
+
+https://twitter.com/t3dotgg/status/1666370016672096256
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
