--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
@@ -56,22 +56,22 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 - 👀 [react-server-dom-vite](https://twitter.com/nkSaraf98/status/1667934636297650179): PR React core en cours de review pour ajouter un package officiel d'intégration Vite pour les Server Components.
 - 👤 [Sophie Alpert looking for a job](https://twitter.com/sebastienlorber/status/1668562588781748224): opportunité unique d'embaucher la top 4 contributrice React.
-- 📜 [React: how to debug the source code](https://andreigatej.dev/blog/react-debugging-the-source-code/)
 - 📜 [Netlify Connect](https://twitter.com/ascorbic/status/1668586011117465600): intégration du data layer GraphQL de Gatsby (Valhalla) dans Netlify, suite au rachat du framework React.
 - 📜 [You Can Stop Hating React.FC](https://www.totaltypescript.com/you-can-stop-hating-react-fc): pour Matt Pocock, avec TypeScript 5.1 et React 18, l'usage de `React.FC` n'est plus un anti-pattern, mais il recommande de rester sur l'annotation de props.
 - 📜 [Colocate your routes into feature folders with Remix Custom Routes](https://www.jacobparis.com/content/remix-custom-routes): explique comment le flat file routing de Remix v2 va améliorer la colocation du code par feature. Avec Remix, il est possible de créer ses propres conventions: propose d'améliorer encore plus avec [remix-custom-routes](https://github.com/jacobparis-insiders/remix-custom-routes) et une convention de nommage avec suffix `.route`.
-- 📜 [Add Drizzle ORM to a Remix app](https://www.jacobparis.com/content/remix-drizzle)
-- 📜 [A Visual Guide to the new App Router in Next.js 13](https://www.builder.io/blog/next-13-app-router)
 - 📜 [Hydration is a tree, Resumability is a map](https://www.builder.io/blog/hydration-tree-resumability-map) + https://twitter.com/manucorporat/status/1668249534802034692
 - 📜 [Better Images in Astro](https://astro.build/blog/images/): dans Astro v2.6, un nouveau composant image optimisé est disponible en expérimental: utilise webp, évite les layout shifts, support des chemins relatifs Markdown et image services externes.
+- 📜 [Zedux: Is this the one?](https://omnistac.github.io/zedux/blog/zedux-is-this-the-one): présentation de Zedux, un nouveau state manager React basé sur des atoms et la composition. Il y a beaucoup de state managers React aujourd'hui, et j'ai trouvé que celui-la sort du lot: liste impressionnante de feature, doc soignée, prends le meilleur des solutions existantes.
+- 📜 [React: how to debug the source code](https://andreigatej.dev/blog/react-debugging-the-source-code/): quelques conseils si vous souhaitez debugger les tests de la codebase React.
+- 📜 [Add Drizzle ORM to a Remix app](https://www.jacobparis.com/content/remix-drizzle)
+- 📜 [A Visual Guide to the new App Router in Next.js 13](https://www.builder.io/blog/next-13-app-router)
 - 🔗 [Thinking in React Query](https://tkdodo.eu/blog/thinking-in-react-query): slides de la présentation à React-Summit. React-Query est un "Async State Manager", et pas uniquement une solution de data fetching.
 - 📦 [Shadcn UI CLI](https://twitter.com/shadcn/status/1666861850091458560): nouveau CLI configurable pour la collection de composants Radix/Tailwind Shadcn UI
-- 📦 [Zedux - A Molecular State Engine for React](https://omnistac.github.io/zedux/) + [Scalability: The Lost Level of React State Management](https://omnistac.github.io/zedux/blog/scalability-the-lost-level)
-- 📦 [Hiber 3D](https://hiberworld.com/developer)
-- 📦 [NakedJSX](https://nakedjsx.org/)
+- 📦 [Hiber 3D](https://hiberworld.com/developer): framework pour créer des mondes 3D intéractifs, basé sur React.
+- 📦 [NakedJSX](https://nakedjsx.org/): CLI pour générer des sites statiques en JSX.
+- 📦 [rad-event-listener](https://github.com/JLarky/rad-event-listener): API alternative pour ajouter des listeners, retourne une cleanup function. Pratique pour réduire le boilerplate React.
 - 📦 [React-Redux 8.1](https://github.com/reduxjs/react-redux/releases/tag/v8.1.0)
 - 📦 [Tremor v3 - React library to build dashboards](https://twitter.com/tremorlabs/status/1666706183409860610)
-- 📦 [rad-event-listener](https://github.com/JLarky/rad-event-listener): API alternative pour ajouter des listeners, retourne une cleanup function. Pratique pour réduire le boilerplate React.
 - 🎙️ [This Month in React – May 2023](https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--May-2023-e25flvh): podcast mensuel sur les news React avec Reactiflux.
 - 🎥 [Is Next.js App Router Slow? Performance Deep Dive](https://www.youtube.com/watch?v=HbUDiNlU6Yw)
 - 🎥 [High-school student makes React a million times faster](https://www.youtube.com/watch?v=VkezQMb1DHw)
@@ -124,12 +124,10 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [Cette library React UI est un Game Changer](https://www.youtube.com/watch?v=IXAw4YbSDhw)
-- [Typescript v5.1 fixe le problème d'undefined - Actus JS de la semaine](https://www.youtube.com/watch?v=OmGICbHLOzU)
+- 🎥 [Cette library React UI est un Game Changer](https://www.youtube.com/watch?v=IXAw4YbSDhw)
+- 🎥 [Typescript v5.1 fixe le problème d'undefined - Actus JS de la semaine](https://www.youtube.com/watch?v=OmGICbHLOzU)
 
-  💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
 ---
 
