--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /148
-title: "React Hebdo #148: ..."
+title: "React Hebdo #148: Remix Routing, React.FC, Vite + RSC, Hydration, Zedux, Valhalla, Astro, Tremor, Reanimated, Expo-Apple-Targets, XCode 15..."
 authors: [slorber]
 date: 06-13-2023
 image: /img/TWIR_POST.png
@@ -9,13 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-Recrutement
+Bon, Dan Abramov est [en vacances](https://twitter.com/dan_abramov/status/1666459095979753477), c'est sans doute pourquoi il ne s'est pas passé grand-chose cette semaine dans notre cher écosystème 😅 On a cependant quelques articles intéressants et un potentiel package officiel pour intégrer les Server Components avec Vite.
 
-Dan Abramov est [en vacances](https://twitter.com/dan_abramov/status/1666459095979753477)
-
-Podcast: https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--May-2023-e25flvh
-
-<Todo />
+Je cherche toujours un [**stagiaire ou alternant**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955), n'hésites pas à postuler!
 
 <!-- truncate -->
 
@@ -54,26 +50,42 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
+[![Colocate your routes into feature folders with Remix Custom Routes](/emails/issues/148/remix-routing.jpg)](https://www.jacobparis.com/content/remix-custom-routes)
+
+**[Colocate your routes into feature folders with Remix Custom Routes](https://www.jacobparis.com/content/remix-custom-routes)**
+
+Explique comment le flat file routing de Remix v2 va améliorer la colocation du code par feature. Il est possible de l'activer dès Remix v1 avec un feature flag. Avec Remix, il est possible de créer ses propres conventions: Jacob propose d'améliorer encore plus la colocation avec [remix-custom-routes](https://github.com/jacobparis-insiders/remix-custom-routes) et une convention de nommage utilisant le suffix `.route.tsx`.
+
+---
+
+[![Hydration is a tree, Resumability is a map](/emails/issues/148/hydration.jpg)](https://www.builder.io/blog/hydration-tree-resumability-map)
+
+**[Hydration is a tree, Resumability is a map](https://www.builder.io/blog/hydration-tree-resumability-map)**
+
+Donne un modèle mental intéressant pour bien comprendre la différence entre hydratation (React) et résumabilité (Qwik). Avec la résumabilité, tous les composants sont considérés comme static, et les event handlers sont le point d'entrée pour l'interactivité. Il n'y a pas besoin de parcourir un arbre (complexité O(n)): avec la résumabilité la scalabilité est linéaire, comme le lookup dans une hashmap (O(1)).
+
+---
+
 - 👀 [react-server-dom-vite](https://twitter.com/nkSaraf98/status/1667934636297650179): PR React core en cours de review pour ajouter un package officiel d'intégration Vite pour les Server Components.
 - 👤 [Sophie Alpert looking for a job](https://twitter.com/sebastienlorber/status/1668562588781748224): opportunité unique d'embaucher la top 4 contributrice React.
-- 📜 [Netlify Connect](https://twitter.com/ascorbic/status/1668586011117465600): intégration du data layer GraphQL de Gatsby (Valhalla) dans Netlify, suite au rachat du framework React.
 - 📜 [You Can Stop Hating React.FC](https://www.totaltypescript.com/you-can-stop-hating-react-fc): pour Matt Pocock, avec TypeScript 5.1 et React 18, l'usage de `React.FC` n'est plus un anti-pattern, mais il recommande de rester sur l'annotation de props.
-- 📜 [Colocate your routes into feature folders with Remix Custom Routes](https://www.jacobparis.com/content/remix-custom-routes): explique comment le flat file routing de Remix v2 va améliorer la colocation du code par feature. Avec Remix, il est possible de créer ses propres conventions: propose d'améliorer encore plus avec [remix-custom-routes](https://github.com/jacobparis-insiders/remix-custom-routes) et une convention de nommage avec suffix `.route`.
-- 📜 [Hydration is a tree, Resumability is a map](https://www.builder.io/blog/hydration-tree-resumability-map) + https://twitter.com/manucorporat/status/1668249534802034692
 - 📜 [Better Images in Astro](https://astro.build/blog/images/): dans Astro v2.6, un nouveau composant image optimisé est disponible en expérimental: utilise webp, évite les layout shifts, support des chemins relatifs Markdown et image services externes.
-- 📜 [Zedux: Is this the one?](https://omnistac.github.io/zedux/blog/zedux-is-this-the-one): présentation de Zedux, un nouveau state manager React basé sur des atoms et la composition. Il y a beaucoup de state managers React aujourd'hui, et j'ai trouvé que celui-la sort du lot: liste impressionnante de feature, doc soignée, prends le meilleur des solutions existantes.
+- 📜 [Zedux: Is this the one?](https://omnistac.github.io/zedux/blog/zedux-is-this-the-one): présentation de Zedux, un nouveau state manager React basé sur des atoms et la composition. Il y a beaucoup de state managers React aujourd'hui, et j'ai trouvé que celui-la sort du lot: liste impressionnante de feature, doc soignée, prend le meilleur des solutions existantes.
 - 📜 [React: how to debug the source code](https://andreigatej.dev/blog/react-debugging-the-source-code/): quelques conseils si vous souhaitez debugger les tests de la codebase React.
+- 📜 [Netlify Connect](https://twitter.com/ascorbic/status/1668586011117465600): intégration du data layer GraphQL de Gatsby (Valhalla) dans Netlify, suite au rachat du framework React.
 - 📜 [Add Drizzle ORM to a Remix app](https://www.jacobparis.com/content/remix-drizzle)
 - 📜 [A Visual Guide to the new App Router in Next.js 13](https://www.builder.io/blog/next-13-app-router)
 - 🔗 [Thinking in React Query](https://tkdodo.eu/blog/thinking-in-react-query): slides de la présentation à React-Summit. React-Query est un "Async State Manager", et pas uniquement une solution de data fetching.
-- 📦 [Shadcn UI CLI](https://twitter.com/shadcn/status/1666861850091458560): nouveau CLI configurable pour la collection de composants Radix/Tailwind Shadcn UI
+- 📦 [Shadcn UI CLI](https://twitter.com/shadcn/status/1666861850091458560): nouveau CLI configurable pour la collection de composants Radix/Tailwind Shadcn UI.
 - 📦 [Hiber 3D](https://hiberworld.com/developer): framework pour créer des mondes 3D intéractifs, basé sur React.
 - 📦 [NakedJSX](https://nakedjsx.org/): CLI pour générer des sites statiques en JSX.
 - 📦 [rad-event-listener](https://github.com/JLarky/rad-event-listener): API alternative pour ajouter des listeners, retourne une cleanup function. Pratique pour réduire le boilerplate React.
-- 📦 [React-Redux 8.1](https://github.com/reduxjs/react-redux/releases/tag/v8.1.0)
 - 📦 [Tremor v3 - React library to build dashboards](https://twitter.com/tremorlabs/status/1666706183409860610)
-- 🎙️ [This Month in React – May 2023](https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--May-2023-e25flvh): podcast mensuel sur les news React avec Reactiflux.
+- 📦 [React-Redux 8.1](https://github.com/reduxjs/react-redux/releases/tag/v8.1.0)
+- 🎙️ [This Month in React – May 2023](https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--May-2023-e25flvh): podcast mensuel avec Reactiflux.
+- 🎥 [Does Lock-In Even Matter Anymore?](https://www.youtube.com/watch?v=rtgjFEJaFI8): reflexion intéressante sur le potentiel lock-in (ou pas) de Vercel lié à l'usage de features de Next.js.
 - 🎥 [Is Next.js App Router Slow? Performance Deep Dive](https://www.youtube.com/watch?v=HbUDiNlU6Yw)
+- 🎥 [From Pages to the App Directory in Next.js 13 (Nested Layouts)](https://www.youtube.com/watch?v=QkntFWb_V8k)
 - 🎥 [High-school student makes React a million times faster](https://www.youtube.com/watch?v=VkezQMb1DHw)
 
 <SubscribeFormEmbed placement="middle" />
@@ -98,15 +110,23 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## 📱 React-Native {#react-native}
 
+- 📜 [Running Maestro UI Tests in an Expo Development Build](https://blog.mobile.dev/running-maestro-ui-tests-in-an-expo-development-builds-1ca443ab2a30)
+- 📦 [React-Native 0.72.0-RC.6](https://github.com/facebook/react-native/releases/tag/v0.72.0-rc.6): nouvelle Golden RC qui fixe quelques bugs et apporte support XCode 15.
+- 📦 [React-Native 0.71.10](https://github.com/facebook/react-native/releases/tag/v0.71.10): support XCode 15 (dispo aussi pour 0.70 et 0.69).
 - 📦 [Reanimated 3.3](https://twitter.com/swmansion/status/1668640779923849216): support de React-Native 0.72 et React Native Web 0.19.
-- 📦 [React-Native 0.71.10](https://github.com/facebook/react-native/releases/tag/v0.71.10): avec la sortie de XCode 15, on devrait avoir encore une autre release v0.71, et la v0.72 arrivera un peu après?
-- 📦 [Expo-Apple-Targets - Config Plugin to setup Apple targets](https://github.com/EvanBacon/expo-apple-targets) + https://twitter.com/Baconbrix/status/1667611993178603524
+- 📦 [Expo-Apple-Targets - Config Plugin to setup Apple targets](https://github.com/EvanBacon/expo-apple-targets): permet de créer des Apple targets (Share Extension, Widgets, Watch App...). Il s'agit uniquement de la partie génération/linking: cela [n'inclus pas la possibilité de coder ces targets en React-Native](https://twitter.com/Baconbrix/status/1668001651922223104).
+- 🎙️ [React-Native-Radio 268 - Embarking on Expo SDK 48](https://reactnativeradio.com/episodes/rnr-268-embarking-on-expo-sdk-48)
+- 🎥 [Building a MacOS App with React Native: Is it Possible?](https://www.youtube.com/watch?v=xkYy_6kje9E)
 - 🎥 [What’s the best cross-platform technology in 2023](https://www.youtube.com/watch?v=lYfgGgJgHB0): belle retrospective du cross-platform de 2010 à 2023, et les principaux acteurs en 2023.
 - 🎥 [React Native Shared Element Transitions with Reanimated 3](https://www.youtube.com/watch?v=tsleLxbvxe0)
 
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
+
+🧑‍💼 [**ReactHebdo + Docusaurus - Stagiaire/Alternant - Full-remote**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955)
+
+Mon offre de stage/alternance pour m'aider dans mon activité! N'hésite pas à postuler si tu es intéressé par l'open-source ou la création de contenu React!
 
 🧑‍💼 [**Shotgun - Senior Full Stack Engineer - 60-75k€ + BSPCE**](https://shotgun.teamtailor.com/jobs/1981578-senior-full-stack-engineer)
 
@@ -148,16 +168,6 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/adamwathan/status/1666939669311901696
-
-https://twitter.com/Mappletons/status/1667244080324136972
-
-https://twitter.com/tannerlinsley/status/1666913815999696897
-
-https://twitter.com/t3dotgg/status/1666370016672096256
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/148/meme.jpg)](https://twitter.com/adamwathan/status/1666939669311901696)
 
 A plus 👋
