--- a/website/newsletter/148/index.mdx
+++ b/website/newsletter/148/index.mdx
@@ -1,15 +1,14 @@
 ---
 slug: /148
-title: "This Week In React #148: ..."
+title: "This Week In React #148: Remix Routing, Hydration, React.FC, Vite + RSC, Zedux, Astro, Tremor, Valhalla, Reanimated, Expo-Apple-Targets, XCode 15..."
 authors: [slorber]
 date: 06-13-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+Well, Dan Abramov is [on holiday](https://twitter.com/dan_abramov/status/1666459095979753477), which is probably why there hasn't been much happening this week in our beloved ecosystem 😅 We do, however, have a few interesting articles and a potential official package for integrating React Server Components with Vite.
 
 <!-- truncate -->
 
