--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/148/index.mdx
@@ -1,15 +1,14 @@
 ---
 slug: /148
-title: "React Hebdo #148: Remix Routing, React.FC, Vite + RSC, Hydration, Zedux, Astro, Tremor, Valhalla, Reanimated, Expo-Apple-Targets, XCode 15..."
+title: "React Hebdo #148: Remix Routing, Hydration, React.FC, Vite + RSC, Zedux, Astro, Tremor, Valhalla, Reanimated, Expo-Apple-Targets, XCode 15..."
 authors: [slorber]
 date: 06-13-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
 
-Bon, Dan Abramov est [en vacances](https://twitter.com/dan_abramov/status/1666459095979753477), c'est sans doute pourquoi il ne s'est pas passé grand-chose cette semaine dans notre cher écosystème 😅 On a cependant quelques articles intéressants et un potentiel package officiel pour intégrer les Server Components avec Vite.
+Bon, Dan Abramov est [en vacances](https://twitter.com/dan_abramov/status/1666459095979753477), c'est sans doute pourquoi il ne s'est pas passé grand-chose cette semaine dans notre cher écosystème 😅 On a cependant quelques articles intéressants et un potentiel package officiel pour intégrer les React Server Components avec Vite.
 
 Je cherche toujours un [**stagiaire ou alternant**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955), n'hésites pas à postuler!
 
