--- a/website/newsletter/148/index.mdx
+++ b/website/newsletter/148/index.mdx
@@ -47,7 +47,43 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Colocate your routes into feature folders with Remix Custom Routes](/emails/issues/148/remix-routing.jpg)](https://www.jacobparis.com/content/remix-custom-routes)
+
+**[Colocate your routes into feature folders with Remix Custom Routes](https://www.jacobparis.com/content/remix-custom-routes)**
+
+Explains how Remix v2's flat file routing will improve featured-based code colocation. This can be activated from Remix v1 with a feature flag. With Remix, you can create your own routing conventions: Jacob proposes to improve colocation even further with [remix-custom-routes](https://github.com/jacobparis-insiders/remix-custom-routes) and a naming convention using the `.route.tsx` suffix.
+
+---
+
+[![Hydration is a tree, Resumability is a map](/emails/issues/148/hydration.jpg)](https://www.builder.io/blog/hydration-tree-resumability-map)
+
+**[Hydration is a tree, Resumability is a map](https://www.builder.io/blog/hydration-tree-resumability-map)**
+
+Gives an interesting mental model for understanding the difference between hydration (React) and resumability (Qwik). With resumability, all components are considered static, and event handlers are the entry point for interactivity. There is no need to traverse a tree (`O(n)`): with resumability, scalability is good, like the lookup in a hashmap (`O(1)`).
+
+---
+
+- 👀 [react-server-dom-vite](https://twitter.com/nkSaraf98/status/1667934636297650179): PR React core en cours de review pour ajouter un package officiel d'intégration Vite pour les Server Components.
+- 👤 [Sophie Alpert looking for a job](https://twitter.com/sebastienlorber/status/1668562588781748224): opportunité unique d'embaucher la top 4 contributrice React.
+- 📜 [You Can Stop Hating React.FC](https://www.totaltypescript.com/you-can-stop-hating-react-fc): pour Matt Pocock, avec TypeScript 5.1 et React 18, l'usage de `React.FC` n'est plus un anti-pattern, mais il recommande de rester sur l'annotation de props.
+- 📜 [Better Images in Astro](https://astro.build/blog/images/): dans Astro v2.6, un nouveau composant image optimisé est disponible en expérimental: utilise webp, évite les layout shifts, support des chemins relatifs Markdown et image services externes.
+- 📜 [Zedux: Is this the one?](https://omnistac.github.io/zedux/blog/zedux-is-this-the-one): présentation de Zedux, un nouveau state manager React basé sur des atoms et la composition. Il y a beaucoup de state managers React aujourd'hui, et j'ai trouvé que celui-la sort du lot: liste impressionnante de feature, doc soignée, prend le meilleur des solutions existantes.
+- 📜 [React: how to debug the source code](https://andreigatej.dev/blog/react-debugging-the-source-code/): quelques conseils si vous souhaitez debugger les tests de la codebase React.
+- 📜 [Netlify Connect](https://twitter.com/ascorbic/status/1668586011117465600): intégration du data layer GraphQL de Gatsby (Valhalla) dans Netlify, suite au rachat du framework React.
+- 📜 [Add Drizzle ORM to a Remix app](https://www.jacobparis.com/content/remix-drizzle)
+- 📜 [A Visual Guide to the new App Router in Next.js 13](https://www.builder.io/blog/next-13-app-router)
+- 🔗 [Thinking in React Query](https://tkdodo.eu/blog/thinking-in-react-query): slides de la présentation à React-Summit. React-Query est un "Async State Manager", et pas uniquement une solution de data fetching.
+- 📦 [Shadcn UI CLI](https://twitter.com/shadcn/status/1666861850091458560): nouveau CLI configurable pour la collection de composants Radix/Tailwind Shadcn UI.
+- 📦 [Hiber 3D](https://hiberworld.com/developer): framework pour créer des mondes 3D intéractifs, basé sur React.
+- 📦 [NakedJSX](https://nakedjsx.org/): CLI pour générer des sites statiques en JSX.
+- 📦 [rad-event-listener](https://github.com/JLarky/rad-event-listener): API alternative pour ajouter des listeners, retourne une cleanup function. Pratique pour réduire le boilerplate React.
+- 📦 [Tremor v3 - React library to build dashboards](https://twitter.com/tremorlabs/status/1666706183409860610)
+- 📦 [React-Redux 8.1](https://github.com/reduxjs/react-redux/releases/tag/v8.1.0)
+- 🎙️ [This Month in React – May 2023](https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--May-2023-e25flvh): podcast mensuel avec Reactiflux.
+- 🎥 [Does Lock-In Even Matter Anymore?](https://www.youtube.com/watch?v=rtgjFEJaFI8): reflexion intéressante sur le potentiel lock-in (ou pas) de Vercel lié à l'usage de features de Next.js.
+- 🎥 [Is Next.js App Router Slow? Performance Deep Dive](https://www.youtube.com/watch?v=HbUDiNlU6Yw)
+- 🎥 [From Pages to the App Directory in Next.js 13 (Nested Layouts)](https://www.youtube.com/watch?v=QkntFWb_V8k)
+- 🎥 [High-school student makes React a million times faster](https://www.youtube.com/watch?v=VkezQMb1DHw)
 
 <SubscribeFormEmbed placement="middle" />
 
