--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -13,7 +13,7 @@ import {
 
 Reach a **qualified and engaged** audience of **experimented React developers** with an ad in our [weekly newsletter](/newsletter).
 
-Last updated: **May 2023**.
+Last updated: **June 2023**.
 
 ---
 
@@ -178,7 +178,7 @@ This sponsorship ad placement offers a generous ad copy length, in the first hal
 
 - **Title**: 55 characters max, 1 link
 - **Body**: 900 characters max, max 2 links, max 3 line breaks, decent usage of bold/smileys/list
-- **Image**: banner or icon/logo
+- **Image**: horizontal banner - ideally 1200x600px
 
 <PrimaryAdExample />
 
@@ -197,7 +197,7 @@ This sponsorship ad placement appears in the middle of the newsletter, in betwee
 
 - **Title**: 55 characters max, 1 link
 - **Body**: 600 characters max, max 1 link, max 2 line breaks, decent usage of bold/smileys/list
-- **Image**: banner or icon/logo
+- **Image**: horizontal banner - ideally 1200x600px
 
 <SecondaryAdExample />
 
@@ -244,7 +244,7 @@ We can offer premium sponsorship opportunities:
 
 To order a sponsorship slot, follow these steps:
 
-- Select your [placement](#placement) and number of issues
+- Select your [placement](#placements) and number of issues
 - Select available dates on the [public sponsorship calendar](https://thisweekinreact.com/calendar)
 - Prepare your company details for invoicing
 - Email us at [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Sponsorship)
@@ -350,9 +350,9 @@ We will tell you if we think your ad is not a good fit.
 
 These companies previously sponsored the newsletter:
 
-- **Products**: Stream, Storyblok, Retool, Sizzy, React-Bricks, Refine, Suncel, React-Admin, TinaCMS, Checkly, SurveyJS, FrontendMasters, Flycode, Axiom, Meteor, Hashnode, Sunsama, RemixTape, Storetasker, Cambly, Indy, TechTree...
 - **Conferences**: App.js, React Brussels, Chain React, BeJS...
-- **Job offers**: Causal, Passionfroot, Cajoo, Front, Cycle, Showtime, Luko, Matters, Maki, Nabla, Pelico, Masteos, Shotgun, Pricemoov, Germinal, WeCasa, iFeelSmart, BAM, Premier Octet, My Little Team...
+- **Products**: Stream, Storyblok, Retool, Sizzy, CoderPad, React-Bricks, Refine, Suncel, React-Admin, TinaCMS, Checkly, SurveyJS, FrontendMasters, Flycode, Axiom, Meteor, Hashnode, Sunsama, RemixTape, Storetasker, Porkbun, UXPin, Cambly, Nylas, Indy, TechTree...
+- **Job offers**: Causal, Passionfroot, G2i, Software Mansion, Cajoo, Front, Cycle, Showtime, Luko, Matters, Maki, Nabla, Pelico, Masteos, Shotgun, Pricemoov, Germinal, WeCasa, iFeelSmart, BAM, Premier Octet, My Little Team...
 
 ## FAQ
 
@@ -372,7 +372,7 @@ The respect of sponsorship dates are a best effort and **not contractual**, unle
 
 This newsletter is mostly run by a [single person](https://twitter.com/sebastienlorber), and unexpected life events can happen.
 
-That can lead to offset the upcoming sponsorship slots. In practice, your dates shouldn't be delayed by more than issue (usually 1 week).
+That can lead to offset the upcoming sponsorship slots. In practice, your dates shouldn't be delayed by more than one issue/week.
 
 We will let you know if publication dates are postponed, and look for a solution together in case your dates are not flexible.
 
@@ -381,14 +381,14 @@ We will let you know if publication dates are postponed, and look for a solution
 <details>
   <summary>Do you provide tracking / reporting?</summary>
 
-We don't provide any kind reporting by default: it is a manual and time-consuming process.
+We don't provide any kind reporting by default, but you can ask for a basic reporting one week after the send.
 
 To measure the result of your newsletter campaign, we suggest:
 
 - to provide your own tracking links to count clicks: use [bit.ly](https://bit.ly/)!
 - to intercept the `utm_` querystring parameters we automatically add to all external links
 
-In the future, we will look into providing a good reporting.
+In the future, we will look into providing a good reporting automatically.
 
 </details>
 
