--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
@@ -42,7 +42,7 @@ Test a starter site
 - [Docusaurus](https://github.com/tinacms/tinasaurus) (Github)
 - [Next.js + Tailwind with visual editing](https://github.com/tinacms/tina-cloud-starter) (Github)
 
-Or run  `npx create-tina-app@latest` then visit `localhost:3000/admin`
+Or run `npx create-tina-app@latest` then visit `localhost:3000/admin`
 
 Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
@@ -161,27 +161,31 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 - 🎥 [Pourquoi React Côté Serveur?](https://www.youtube.com/watch?v=Muv47j75_Cw)
 - 🎥 [Résultats du sondage de StackOverflow - Actus JS de la semaine](https://www.youtube.com/watch?v=HU5MajsGago)
+- 🎥 [L'histoire de JavaScript en 5 minutes !](https://www.youtube.com/watch?v=oCVIwB0b-Uk)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-<Todo />
+[![Pylote](/emails/issues/149/pylote.jpg)](https://pylote.io/?utm_source=newsletter&utm_medium=insert&utm_campaign=sebastienl)
+
+💸 **[Pylote - L'extension 100% gratuite pour être sur toutes les plateformes de freelance.](https://pylote.io/?utm_source=newsletter&utm_medium=insert&utm_campaign=sebastienl)**
+
+- **Importe** ton profil Comet ou LinkedIn en 5 secondes.
+- **Synchronise** ta dispo et** diffuse** ton profil auprès de 17 cabinets de recrutement : Comet, Crème, Cherry-Pick...
+- **Accède** à un jobboard centralisé regroupant un ensemble de missions.
 
 ---
 
 ## 🔀 Autre {#other}
 
+- [Chrome for Testing: reliable downloads for browser automation](https://developer.chrome.com/blog/chrome-for-testing/)
 - [Miško Hevery's Take on a Unified Theory of Reactivity](https://www.builder.io/blog/unified-reactivity-theory)
 - [Modern component-driven HTML email](https://fullystacked.net/posts/modern-component-driven-email/)
-- [Chrome for Testing: reliable downloads for browser automation](https://developer.chrome.com/blog/chrome-for-testing/)
 - [The 2023 State of CSS survey is now open](https://dev.to/sachagreif/the-2023-state-of-css-survey-is-now-open-18bk)
 - [The gotchas of CSS Nesting](https://kilianvalkhof.com/2023/css-html/the-gotchas-of-css-nesting/)
 - [NestJS 10.0](https://trilon.io/blog/nestjs-10-is-now-available)
-- [Looking forward to standardised design tokens](https://fullystacked.net/posts/design-tokens/)
-- [The origin private file system](https://web.dev/origin-private-file-system/)
 - [Rspack v0.2.3](https://twitter.com/rspack_dev/status/1671035874770038784)
 - [TypeScript 5.2's New Keyword: 'using'](https://www.totaltypescript.com/typescript-5-2-new-keyword-using)
 - [Vitest 1.0 Roadmap](https://twitter.com/sheremet_va/status/1669740155391864833)
-- [New W3C Website](https://www.w3.org/blog/2023/new-w3c-website-deployed/)
 
 ---
 
