--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
@@ -9,9 +9,12 @@ unlisted: true
 
 Salut à tous !
 
-sponsor section FR + job
+🇫🇷 Cet été, je vais essayer de dynamiser un peu plus la partie en français de la newsletter, qui n'est pas très vivante:
 
-<Todo />
+- Ajout d'un sponsor français lié à React: produit, cours, agence, formation...
+- Des offres CDI/freelances qui tournent régulièrement, fournies par des plateformes partenaires
+
+Je cherche toujours un [**stagiaire ou alternant**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955), n'hésites pas à postuler! Dernière chance: j'ai déjà reçu pas mal de candidatures et compte retirer l'annonce la semaine prochaine.
 
 <!-- truncate -->
 
@@ -125,7 +128,7 @@ https://deploy-preview-3725--react-native.netlify.app/blog/2023/06/21/0.72-metro
 ---
 
 - 💬 [New Renderer Interop Layer](https://twitter.com/cortinico/status/1671089178107363329)
-- 💬 [Upcoming changes for libraries in React Native 0.73 - Android](https://github.com/react-native-community/discussions-and-proposals/issues/671)
+- 💬 [Upcoming changes for libraries in React Native 0.73 - Android](https://github.com/react-native-community/discussions-and-proposals/issues/671): il faudra ajouter un namespace sur le build Gradle.
 - 👀 [React-Native macOS 0.71 - Enable New Architecture on init template](https://github.com/microsoft/react-native-macos/pull/1853)
 - 👀 [1/5 of the top 100 Medical apps in the App Store use React Native](https://twitter.com/Baconbrix/status/1671171049336221697)
 - 👀 [Expo Updates - upcoming Brotli compression support](https://twitter.com/JI/status/1671368239463690240)
