--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
@@ -53,21 +53,15 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
-[Panda CSS](https://panda-css.com/)
+[![Panda CSS](/emails/issues/149/panda.jpg)](https://panda-css.com/)
 
-- CSS-in-JS
-- lightweight runtime
-- no generated styles, no style in head
-- atomic CSS
-- RSC
+**[Panda CSS](https://panda-css.com/)**
 
-https://twitter.com/thesegunadebayo/status/1668735066732732419
+Segun Adebayo (créateur Chakra UI) dévoile sa très attendue librairie CSS-in-JS ([trailer](https://twitter.com/thesegunadebayo/status/1669732623994834946)). Elle offre une très bonne DX, est basée sur des features CSS modernes (cascade layers), est performante (analyse statique au build, sans runtime, atomic CSS)... Bref, elle coche beaucoup de cases et suscite l'engouement. Elle s'intègre particulièrement bien avec React (JSX style props, compatible React Server Components...), mais peut également être utilisée par d'autres frameworks.
 
-https://twitter.com/peduarte/status/1670718421007228928
+Une librairie à surveiller de prêt et qui pourrait bien concurrencer Tailwind: elle s'intègre mieux avec les frameworks cibles et ne force pas l'usage d'un `className` à rallonge.
 
 ---
-
-[Isograph - The best client for building React apps powered by GraphQL data.](https://isograph.substack.com/p/introducing-isograph)
 
 former member of the React org at Meta, where I worked on Relay
 
@@ -81,6 +75,7 @@ former member of the React org at Meta, where I worked on Relay
 - 📊 [Stack Overflow Developer Survey 2023](https://survey.stackoverflow.co/2023/): comme on pouvait s'y attendre, React reste le framework web le plus utilisé cette année. Next.js fait une belle montée dans le classement.
 - 💬 [Gatsby RFC - Adapters](https://github.com/gatsbyjs/gatsby/discussions/38231): nouveau type de plugin pour adapter le build à une plateforme de déploiement (Vercel, Netlify...) et uniformiser la gestion du caching, headers, redirects etc...
 - 📖 [Improved Next.js image docs](https://twitter.com/leeerob/status/1670815761508581376)
+- 📜 [Introducing Isograph](https://isograph.substack.com/p/introducing-isograph): Robert Balicki (ex Relay) partage le POC d'un nouveau client GraphQL pour React basé sur le concept de resolvers.
 - 📜 [SpiderMonkey Newsletter (Firefox 114-115)](https://spidermonkey.dev/blog/2023/06/09/newsletter-firefox-114-115.html): Firefox annonce travailler sur des optimisations pour les frameworks comme React. Avec Firefox 115, [tous les navigateurs supportent maintenant Change Array By Copy](https://twitter.com/sebastienlorber/status/1671166785738133505), nouvelle feature ES2023 très utile pour updater le state React.
 - 📜 [React Admin June 2023 Update](https://marmelab.com/blog/2023/06/13/react-admin-june-2023-update.html): présente une belle liste de features introduites ces 3 derniers mois.
 - 📜 [Ryan Bigg - Rails 7, React, TypeScript, ESBuild and View Components](https://ryanbigg.com/2023/06/rails-7-react-typescript-setup): expliquer comment intégrer manuellement React dans une app Rails. Mode SPA, ou avec plusieurs points d'entrée.
@@ -127,12 +122,12 @@ https://deploy-preview-3725--react-native.netlify.app/blog/2023/06/21/0.72-metro
 
 ---
 
+- 📜 [Environment Variables in React Native: The Right Way](https://elazizi.com/posts/environment-variables-in-react-native-the-right-way/): un bon article sur la gestion des variables d'environnement de manière typesafe dans un contexte Expo.
 - 💬 [New Renderer Interop Layer](https://twitter.com/cortinico/status/1671089178107363329): avec la v0.72, une couche interop expérimentale permet l'usage de composants React-Native legacy avec le nouveau renderer Fabric. Cela permet une adoption incrémentale de la nouvelle architecture.
 - 💬 [Upcoming changes for libraries in React Native 0.73 - Android](https://github.com/react-native-community/discussions-and-proposals/issues/671): il faudra ajouter un namespace sur le build Gradle.
 - 👀 [React-Native macOS 0.71 - New Architecture on init template](https://github.com/microsoft/react-native-macos/pull/1853)
 - 👀 [1/5 of the top 100 Medical apps in the App Store use React Native](https://twitter.com/Baconbrix/status/1671171049336221697)
 - 👀 [Expo Updates - upcoming Brotli compression support](https://twitter.com/JI/status/1671368239463690240)
-- 📜 [Environment Variables in React Native: The Right Way](https://elazizi.com/posts/environment-variables-in-react-native-the-right-way/): une méthode typesafe pour charger et accéder aux variables d'environnement dans un contexte Expo.
 - 📦 [react-native-colo-loco 1.1 - Colocate native and js code](https://twitter.com/jamonholmgren/status/1671009094545846273)
 - 📦 [react-native-mmkv 2.9 - RN 0.73 support](https://twitter.com/mrousavy/status/1671127232113266689)
 - 📦 [Maestro 1.29](https://twitter.com/mobile__dev/status/1670940310460043266)
