--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
@@ -116,6 +116,16 @@ Remove the disconnect between design & code and release products faster!
 
 https://deploy-preview-3725--react-native.netlify.app/blog/2023/06/21/0.72-metro-package-exports-symlinks
 
+https://deploy-preview-3705--react-native.netlify.app/blog/2023/06/21/package-exports-support
+
+https://github.com/facebook/react-native-website/pull/3705
+
+https://github.com/facebook/react-native-website/pull/3725
+
+docs: https://github.com/facebook/react-native-website/pull/3770
+
+npm: https://www.npmjs.com/package/react-native?activeTab=versions
+
 ---
 
 - 📜 [Environment Variables in React Native: The Right Way](https://elazizi.com/posts/environment-variables-in-react-native-the-right-way/): un bon article sur la gestion des variables d'environnement de manière typesafe dans un contexte Expo.
